@@ -37,6 +37,7 @@ import uk.gov.justice.laa.dstew.access.repository.DecisionRepository;
 import uk.gov.justice.laa.dstew.access.repository.MeritsDecisionRepository;
 import uk.gov.justice.laa.dstew.access.repository.ProceedingRepository;
 import uk.gov.justice.laa.dstew.access.validation.ApplicationValidations;
+import uk.gov.justice.laa.dstew.access.validation.PayloadValidationService;
 
 /**
  * Service class for managing Applications.
@@ -57,6 +58,7 @@ public class ApplicationService {
   private final MeritsDecisionRepository meritsDecisionRepository;
   private final LinkedApplicationService linkedApplicationService;
   private final ProceedingsService proceedingsService;
+  private final PayloadValidationService payloadValidationService;
 
   /**
    * Constructs an ApplicationService with required dependencies.
@@ -77,13 +79,14 @@ public class ApplicationService {
                             final ProceedingRepository proceedingRepository,
                             final MeritsDecisionRepository meritsDecisionRepository,
                             final LinkedApplicationService linkedApplicationService,
-                            final ProceedingsService proceedingsService) {
+                            final ProceedingsService proceedingsService, PayloadValidationService payloadValidationService) {
     this.applicationRepository = applicationRepository;
     this.applicationMapper = applicationMapper;
     this.applicationValidations = applicationValidations;
     this.applicationContentParser = applicationContentParserService;
     this.proceedingRepository = proceedingRepository;
     this.proceedingsService = proceedingsService;
+    this.payloadValidationService = payloadValidationService;
     objectMapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
     this.objectMapper = objectMapper;
     this.caseworkerRepository = caseworkerRepository;
@@ -115,7 +118,7 @@ public class ApplicationService {
   public UUID createApplication(final ApplicationCreateRequest req) {
     ApplicationEntity entity = applicationMapper.toApplicationEntity(req);
     RequestApplicationContent requestApplicationContent =
-        objectMapper.convertValue(req.getApplicationContent(), RequestApplicationContent.class);
+        payloadValidationService.convertAndValidate(req.getApplicationContent(), RequestApplicationContent.class);
     setValuesFromApplicationContent(entity, requestApplicationContent);
     entity.setSchemaVersion(applicationVersion);
 
@@ -125,7 +128,7 @@ public class ApplicationService {
 
     linkedApplicationService.processLinkedApplications(parsedContentDetails);
 
-    
+
     proceedingsService.saveProceedings(requestApplicationContent.getApplicationContent(), saved.getId());
     domainEventService.saveCreateApplicationDomainEvent(saved, null);
     createAndSendHistoricRecord(saved, null);
@@ -136,7 +139,7 @@ public class ApplicationService {
   /**
    * Sets key fields in the application entity based on parsed application content.
    *
-   * @param entity application entity to update
+   * @param entity            application entity to update
    * @param requestAppContent application content from the request
    */
   private void setValuesFromApplicationContent(ApplicationEntity entity,
@@ -149,6 +152,7 @@ public class ApplicationService {
     entity.setCategoryOfLaw(parsedContentDetails.categoryOfLaw());
     entity.setMatterType(parsedContentDetails.matterType());
     entity.setSubmittedAt(parsedContentDetails.submittedAt());
+    entity.setOfficeCode(parsedContentDetails.officeCode());
   }
 
 
@@ -195,7 +199,7 @@ public class ApplicationService {
   private ApplicationEntity checkIfApplicationExists(final UUID id) {
     return applicationRepository.findById(id)
         .orElseThrow(() -> new ResourceNotFoundException(
-                "No application found with id: %s".formatted(id)
+            String.format("No application found with id: %s", id)
         ));
   }
 
@@ -207,8 +211,8 @@ public class ApplicationService {
    */
   private CaseworkerEntity checkIfCaseworkerExists(final UUID caseworkerId) {
     return caseworkerRepository.findById(caseworkerId)
-            .orElseThrow(() -> new ResourceNotFoundException(
-                "No caseworker found with id: %s".formatted(caseworkerId)));
+        .orElseThrow(() -> new ResourceNotFoundException(
+            String.format("No caseworker found with id: %s", caseworkerId)));
   }
 
   /**
@@ -305,7 +309,7 @@ public class ApplicationService {
    * Update an existing application to add the decision details.
    *
    * @param applicationId application UUID
-   * @param request DTO with update fields
+   * @param request       DTO with update fields
    */
   @Transactional
   @PreAuthorize("@entra.hasAppRole('ApplicationWriter')")
@@ -317,13 +321,14 @@ public class ApplicationService {
 
     application.setStatus(request.getApplicationStatus());
     application.setModifiedAt(Instant.now());
+    application.setIsAutoGranted(request.getAutoGranted());
     applicationRepository.save(application);
 
     DecisionEntity decision = decisionRepository.findByApplicationId(applicationId)
-            .orElse(DecisionEntity.builder()
-                    .applicationId(applicationId)
-                    .meritsDecisions(Set.of())
-                    .build());
+        .orElse(DecisionEntity.builder()
+            .applicationId(applicationId)
+            .meritsDecisions(Set.of())
+            .build());
 
     Set<MeritsDecisionEntity> merits = new LinkedHashSet<>(decision.getMeritsDecisions());
 
@@ -338,13 +343,13 @@ public class ApplicationService {
       ProceedingEntity proceedingEntity = proceedingEntityMap.get(proceeding.getProceedingId());
 
       MeritsDecisionEntity meritDecisionEntity = decision.getMeritsDecisions().stream()
-              .filter(m -> m.getProceeding().getId().equals(proceeding.getProceedingId()))
-              .findFirst()
-              .orElseGet(() -> {
-                MeritsDecisionEntity newEntity = new MeritsDecisionEntity();
-                newEntity.setProceeding(proceedingEntity);
-                return newEntity;
-              });
+          .filter(m -> m.getProceeding().getId().equals(proceeding.getProceedingId()))
+          .findFirst()
+          .orElseGet(() -> {
+            MeritsDecisionEntity newEntity = new MeritsDecisionEntity();
+            newEntity.setProceeding(proceedingEntity);
+            return newEntity;
+          });
 
       meritDecisionEntity.setModifiedAt(Instant.now());
       meritDecisionEntity.setDecision(MeritsDecisionStatus.valueOf(proceeding.getMeritsDecision().getDecision().toString()));
@@ -362,8 +367,8 @@ public class ApplicationService {
 
     if (decision.getOverallDecision() == DecisionStatus.REFUSED) {
       domainEventService.saveMakeDecisionRefusedDomainEvent(
-              applicationId,
-              request
+          applicationId,
+          request
       );
     }
   }
